# MyFileManager

./: CMakeLists.txt  Doxyfile  LICENSE  README.md
lab1/MyFileManagerApp/: MyFileManagerApp.cpp
lab1/MyFileManagerLib/: MyFileManager.cpp  MyFileManager.h
lab1/MyFileManagerTests/: MyFileManagerTests.cpp
